2001-05-13  Tom Tromey  <tromey@redhat.com>

	* tests/defs: Find files to copy in lib/.
	* automake.in (perllibdir): Set to Automake directory.
	* ansi2knr.c, ansi2knr.1: Removed.
	* Makefile.am (dist_am_DATA): Removed.
	(amdir): Removed.
	(maintainer-check): Look for lib/am/*.am.  Expect 28 lines of
	diffs.
	(scriptdir): Removed.
	(dist_script_DATA): Likewise.
	(install-data-hook): Likewise.
	(installcheck-local): Likewise.
	(TAGS_FILES): Removed amfiles.
	(dist_pkgdata_DATA): Removed ansi2knr.c and ansi2knr.1.
	* tests/installsh.test (AUTOMAKE): Use --libdir, not --amdir, and
	point it to the right directory.
	* ansi2knr.am, check.am, clean-hdr.am, clean.am, comp-vars.am,
	compile.am, configure.am, data.am, dejagnu.am, depend.am,
	depend2.am, distdir.am, footer.am, header-vars.am, header.am,
	install.am, java.am, lang-compile.am, lex.am, library.am, libs.am,
	libtool.am, lisp.am, ltlib.am, ltlibrary.am, mans-vars.am,
	mans.am, multilib.am, program.am, progs.am, python.am,
	remake-hdr.am, scripts.am, subdirs.am, tags.am, texi-vers.am,
	texibuild.am, texinfos.am, yacc.am: Moved to lib/am/.	
	* configure.in (AC_OUTPUT): Added lib/am/Makefile.
	(AUTOMAKE): Use --libdir, not --amdir.
	Ues AC_CONFIG_AUX_DIR.
	* lib/Makefile.am (SUBDIRS): Added `am'.
	(scriptdir): New macro.
	(dist_script_DATA): Likewise.
	(dist_pkgdata_DATA): Likewise.
	(install-data-hook): New target.
	(installcheck-local): Likewise.
	* lib/am/Makefile.in: New file.
	* lib/am/Makefile.am: Removed everything except amdir and
	dist_am_DATA.

2001-05-13  Akim Demaille  <akim@epita.fr>

	* automake.in ($pkgdata_dir): Rename as...
	($libdir): this.
	($am_dir): Remove, replace it's uses with $libdir.
	(&parse_arguments): Replace --amdir with --libdir.
	* automake.texi (Invoking Automake): Document --libdir, not
	--amdir.
	* tests/defs (AUTOMAKE): Use --libdir, not --amdir.

2001-05-13  Tom Tromey  <tromey@redhat.com>

	* m4/depout.m4 (AM_OUTPUT_DEPENDENCY_COMMANDS): Use AMDEP_TRUE,
	not AMDEP.