@@ -1,5 +1,7 @@
 2001-05-13  Tom Tromey  <tromey@redhat.com>
 
+	* Makefile.am (dist_pkgdata_DATA): Removed.
+
 	* tests/defs: Find files to copy in lib/.
 	* automake.in (perllibdir): Set to Automake directory.
 	* ansi2knr.c, ansi2knr.1: Removed.
